# backend/docs/swagger.json
@@ -8,7 +8,42 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/login": {
+        "/api/v1/items/{id}": {
+            "get": {
+                "description": "Get item from the database by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "items"
+                ],
+                "summary": "Get item by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Item ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/auth/login": {
             "post": {
                 "description": "Login a user with the input payload",
                 "consumes": [
@@ -54,7 +89,7 @@
                 }
             }
         },
-        "/api/v1/auth/signup": {
+        "/auth/signup": {
             "post": {
                 "description": "Create a new user with the input payload",
                 "consumes": [
@@ -96,41 +131,6 @@
                         "schema": {
                             "type": "string"
                         }
-                    }
-                }
-            }
-        },
-        "/api/v1/items/{id}": {
-            "get": {
-                "description": "Get item from the database by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "items"
-                ],
-                "summary": "Get item by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Item ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -338,7 +338,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@example.com"
+                    "example": "test1@example.com"
                 },
                 "password": {
                     "type": "string",
@@ -357,7 +357,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@example.com"
+                    "example": "test1@example.com"
                 },
                 "name": {
                     "type": "string",
